--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rc-table",
+  "name": "cube-table",
   "version": "7.0.0-alpha.21",
   "description": "table ui component for react",
   "keywords": [
@@ -17,14 +17,10 @@
   ],
   "main": "./lib/index",
   "module": "./es/index",
-  "homepage": "http://github.com/react-component/table",
-  "maintainers": [
-    "yiminghe@gmail.com",
-    "afc163@gmail.com"
-  ],
+  "homepage": "https://github.com/dengxiaofeng/cube-table.git",
   "repository": {
     "type": "git",
-    "url": "git@github.com:react-component/table.git"
+    "url": "https://github.com/dengxiaofeng/cube-table.git"
   },
   "bugs": {
     "url": "http://github.com/react-component/table/issues"
